# HabrDigest

./: .gitignore  CONTRIBUTING.md  DATABASE.md  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py
app/api/: __init__.py  database.py
app/bot/: __init__.py  bot.py  handlers.py
app/core/: config.py
app/database/: __init__.py  database.py  models.py
app/services/: __init__.py  ai_service.py  database_service.py  digest_service.py  parser_service.py  yandex_service.py
celery_app/: __init__.py  celery_app.py  tasks.py
docs/: API.md  DATABASE.md  DEVELOPMENT.md  QUICK_START.md  README.md  SETUP.md  YANDEX_SETUP.md
migrations/: __init__.py  env.py
migrations/versions/: 0001_initial_schema.py  0002_add_default_topics.py  __init__.py
scripts/: db_init.sh  db_reset.sh  start_dev.sh  start_prod.sh
tests/: conftest.py  test_api.py  test_database_service.py  test_main.py
